fix z-index popup

--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -25,7 +25,7 @@
 
 .popup {
     position: fixed;
-    z-index: 10;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
@@ -202,4 +202,8 @@ div#popup-header {
 
 .color-controlpanel {
     margin-bottom: 20px;
+}
+
+#popupClose {
+    cursor: pointer;
 }
